3821B1FI3/9_gelu_ocl/sadikov_damir/log.txt
In file included from /usr/local/cuda/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp:3:
/usr/local/cuda/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp:26:48: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   26 |   cl_command_queue queue = clCreateCommandQueue(context, device, 0, nullptr);
      |                            ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp:3:
/usr/local/cuda/include/CL/cl.h:1914:1: note: declared here
 1914 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp:40:53: error: cannot convert ‘int*’ to ‘const size_t*’ {aka ‘const long unsigned int*’}
   40 |   clEnqueueNDRangeKernel(queue, kernel, 1, nullptr, &sz, nullptr, 0, nullptr, nullptr);
      |                                                     ^~~
      |                                                     |
      |                                                     int*
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1FI3/9_gelu_ocl/sadikov_damir/gelu_ocl.cpp:3:
/usr/local/cuda/include/CL/cl.h:1736:41: note:   initializing argument 5 of ‘cl_int clEnqueueNDRangeKernel(cl_command_queue, cl_kernel, cl_uint, const size_t*, const size_t*, const size_t*, cl_uint, _cl_event* const*, _cl_event**)’
 1736 |                        const size_t *   global_work_size,
      |                        ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
